--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@types/js-cookie": "^3.0.6",
     "cookies": "^0.9.1",
     "dotenv": "^16.4.5",
@@ -17,15 +20,19 @@
     "next": "^14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-responsive": "^10.0.0",
     "uuid": "^10.0.0",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
+    "@types/webpack": "^5.28.5",
+    "@types/webpack-env": "^1.18.5",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "postcss": "^8.4.39",
