--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "@types/webpack": "^5.28.5",
     "@types/webpack-env": "^1.18.5",
     "autoprefixer": "^10.4.19",
-    "eslint": "^8",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.5",
+    "eslint-plugin-next": "^0.0.0",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
     "typescript": "^5"
