--- a/package.json
+++ b/package.json
@@ -24,21 +24,23 @@
     "uuid": "^10.0.0",
     "zustand": "^4.5.4"
   },
-  "devDependencies": {
-    "@svgr/webpack": "^8.1.0",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/uuid": "^10.0.0",
-    "@types/webpack": "^5.28.5",
-    "@types/webpack-env": "^1.18.5",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.5",
-    "eslint-plugin-next": "^0.0.0",
-    "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5"
-  }
+"devDependencies": {
+  "@svgr/webpack": "^8.1.0",
+  "@types/jsonwebtoken": "^9.0.6",
+  "@types/node": "^20",
+  "@types/react": "^18",
+  "@types/react-dom": "^18",
+  "@types/uuid": "^10.0.0",
+  "@types/webpack": "^5.28.5",
+  "@types/webpack-env": "^1.18.5",
+  "@typescript-eslint/eslint-plugin": "^6.0.0", 
+  "@typescript-eslint/parser": "^6.0.0", 
+  "autoprefixer": "^10.4.19",
+  "eslint": "^8.57.0",
+  "eslint-config-next": "^14.2.5",
+  "eslint-plugin-next": "^0.0.0",
+  "postcss": "^8.4.39",
+  "tailwindcss": "^3.4.4",
+  "typescript": "^5"
+}
 }
