--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,20 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "eslint:recommended",
-    "plugin:react/recommended",
-    "plugin:@typescript-eslint/recommended"
-  ],
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:react/recommended",
+    "next/core-web-vitals"
+  ],
+  "plugins": ["@typescript-eslint", "react"],
   "env": {
     "browser": true,
     "es2021": true
+  },
+  "rules": {
+    "@typescript-eslint/no-unused-vars": "warn",
+    "react/react-in-jsx-scope": "error",
+    "prefer-const": "warn",
+    "react/no-unescaped-entities": "warn"
   }
 }
