add mongodb database

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
     "@typescript-eslint/no-unused-vars": "warn",
     "react/react-in-jsx-scope": "error",
     "prefer-const": "warn",
-    "react/no-unescaped-entities": "warn"
+    "react/no-unescaped-entities": "warn",
+    "no-var": "off"
   }
 }
