--- a/package.json
+++ b/package.json
@@ -13,34 +13,36 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@types/js-cookie": "^3.0.6",
+    "bcrypt": "^5.1.1",
     "cookies": "^0.9.1",
     "dotenv": "^16.4.5",
     "jose": "^5.6.3",
     "js-cookie": "^3.0.5",
+    "mongodb": "^6.8.0",
     "next": "^14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-responsive": "^10.0.0",
-    "uuid": "^10.0.0",
     "zustand": "^4.5.4"
   },
-"devDependencies": {
-  "@svgr/webpack": "^8.1.0",
-  "@types/jsonwebtoken": "^9.0.6",
-  "@types/node": "^20",
-  "@types/react": "^18",
-  "@types/react-dom": "^18",
-  "@types/uuid": "^10.0.0",
-  "@types/webpack": "^5.28.5",
-  "@types/webpack-env": "^1.18.5",
-  "@typescript-eslint/eslint-plugin": "^6.0.0", 
-  "@typescript-eslint/parser": "^6.0.0", 
-  "autoprefixer": "^10.4.19",
-  "eslint": "^8.57.0",
-  "eslint-config-next": "^14.2.5",
-  "eslint-plugin-next": "^0.0.0",
-  "postcss": "^8.4.39",
-  "tailwindcss": "^3.4.4",
-  "typescript": "^5"
-}
+  "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
+    "@types/webpack": "^5.28.5",
+    "@types/webpack-env": "^1.18.5",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.5",
+    "eslint-plugin-next": "^0.0.0",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5"
+  }
 }
